regal-macros/tests/ui/missing_pattern.rs
use regal_macros::RegalLexer;

#[derive(RegalLexer)]
enum Bad {
    A,
    #[token("a")]
    B,
}

fn main() {}
